--- a/components/iptables.yml
+++ b/components/iptables.yml
@@ -11,6 +11,7 @@ rules:
 - package_iptables-persistent_installed
 - package_iptables-persistent_removed
 - package_iptables-services_installed
+- package_iptables-services_removed
 - package_iptables_installed
 - service_ip6tables_enabled
 - service_iptables_enabled
