--- a/linux_os/guide/system/accounts/accounts-restrictions/password_storage/no_empty_passwords_etc_shadow/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_storage/no_empty_passwords_etc_shadow/rule.yml
@@ -41,6 +41,7 @@ references:
     stigid@ol7: OL07-00-010291
     stigid@ol8: OL08-00-010121
     stigid@rhel7: RHEL-07-010291
+    stigid@rhel8: RHEL-08-010121
     stigid@sle12: SLES-12-010221
     stigid@sle15: SLES-15-020181
 
