--- a/tests/data/product_stability/example.yml
+++ b/tests/data/product_stability/example.yml
@@ -6,6 +6,7 @@ basic_properties_derived: true
 benchmark_id: EXAMPLE
 benchmark_root: ../../linux_os/guide
 chrony_conf_path: /etc/chrony.conf
+components_root: ../../components
 cpes:
 - example:
     check_id: installed_OS_is_part_of_Unix_family
