fix: firewalld_sshd_port_enabled: use ansible_package_install to install packages

--- a/linux_os/guide/services/ssh/ssh_server/firewalld_sshd_port_enabled/ansible/shared.yml
+++ b/linux_os/guide/services/ssh/ssh_server/firewalld_sshd_port_enabled/ansible/shared.yml
@@ -6,13 +6,7 @@
 
 {{{ ansible_instantiate_variables("firewalld_sshd_zone") }}}
 
-- name: '{{{ rule_title }}} - Ensure firewalld and NetworkManager packages are installed'
-  ansible.builtin.package:
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - firewalld
-    - NetworkManager
+{{{ ansible_package_install(["firewalld", "NetworkManager"]) }}}
 
 - name: '{{{ rule_title }}} - Collect facts about system services'
   ansible.builtin.service_facts:
