fix: accounts_passwords_pam_faillock_dir: use ansible_package_install to install packages

--- a/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_faillock_dir/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_faillock_dir/ansible/shared.yml
@@ -7,14 +7,7 @@
 {{{ ansible_pam_faillock_enable() }}}
 {{{ ansible_pam_faillock_parameter_value("dir", "var_accounts_passwords_pam_faillock_dir") }}}
 
-- name: '{{{ rule_title }}} - Ensure necessary SELinux packages are installed'
-  ansible.builtin.package:
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - python3-libselinux
-    - python3-policycoreutils
-    - policycoreutils-python-utils
+{{{ ansible_package_install(["python3-libselinux", "python3-policycoreutils", "policycoreutils-python-utils"], "necessary SELinux") }}}
 
 - name: '{{{ rule_title }}} - Create the tally directory if it does not exist'
   ansible.builtin.file:
