fix: wireless_disable_interfaces: use ansible_package_install to install packages

--- a/linux_os/guide/system/network/network-wireless/wireless_software/wireless_disable_interfaces/ansible/shared.yml
+++ b/linux_os/guide/system/network/network-wireless/wireless_software/wireless_disable_interfaces/ansible/shared.yml
@@ -4,12 +4,7 @@
 # complexity = low
 # disruption = medium
 
-- name: Ensure NetworkManager is installed
-  ansible.builtin.package:
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - NetworkManager
+{{{ ansible_package_install(["NetworkManager"]) }}}
 
 - name: Deactivate Wireless Network Interfaces
   command: nmcli radio wifi off
