--- a/linux_os/guide/system/software/integrity/fips/package_dracut-fips-aesni_installed/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/fips/package_dracut-fips-aesni_installed/ansible/shared.yml
@@ -9,9 +9,6 @@
   register: aesni_supported
   check_mode: no
 
-- name: Ensure dracut-fips-aesni is installed
-  package:
-    name: dracut-fips-aesni
-    state: present
+{{{ ansible_package_install(["dracut-fips-aesni"]) }}}
   when:
     - aesni_supported.rc == 0
