--- a/linux_os/guide/system/accounts/accounts-restrictions/account_expiration/account_emergency_expire_date/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/account_expiration/account_emergency_expire_date/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: fedora,ol7,ol8,ol9,rhel7,rhel8,rhel9
+prodtype: fedora,ol7,ol8,ol9,rhel7,rhel8,rhel9,ubuntu2004
 
 title: 'Assign Expiration Date to Emergency Accounts'
 
@@ -45,6 +45,7 @@ references:
     stigid@ol8: OL08-00-020270
     stigid@rhel7: RHEL-07-010271
     stigid@rhel8: RHEL-08-020270
+    stigid@ubuntu2004: UBTU-20-010410
 
 ocil_clause: 'any emergency accounts have no expiration date set or do not expire within 72 hours'
 
