--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -1857,6 +1857,7 @@ controls:
     rules:
       - sshd_approved_macs=cis_sle15
       - sshd_use_approved_macs
+      - sshd_strong_macs=cis_sle15
       - sshd_use_strong_macs
 
   - id: 5.2.15
