Add platform package clause for firewalld related rules

--- a/linux_os/guide/system/network/network-firewalld/firewalld_activation/service_firewalld_enabled/rule.yml
+++ b/linux_os/guide/system/network/network-firewalld/firewalld_activation/service_firewalld_enabled/rule.yml
@@ -14,6 +14,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[firewalld]
+
 identifiers:
     cce@rhcos4: CCE-82554-7
     cce@rhel7: CCE-80998-8
