--- a/linux_os/guide/system/network/network-firewalld/set_firewalld_appropriate_zone/rule.yml
+++ b/linux_os/guide/system/network/network-firewalld/set_firewalld_appropriate_zone/rule.yml
@@ -15,6 +15,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[firewalld]
+
 identifiers:
     cce@rhel7: CCE-86109-6
     cce@rhel8: CCE-86111-2
