--- a/linux_os/guide/system/network/network_implement_access_control/rule.yml
+++ b/linux_os/guide/system/network/network_implement_access_control/rule.yml
@@ -60,6 +60,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[firewalld]
+
 references:
     disa: CCI-000366
     nist: CM-6 b,CM-6.1(iv)
