--- a/linux_os/guide/system/accounts/accounts-restrictions/root_logins/use_pam_wheel_group_for_su/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/root_logins/use_pam_wheel_group_for_su/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: ubuntu2004,ubuntu2204,sle12,sle15
+prodtype: sle12,sle15,ubuntu2004,ubuntu2204
 
 title: 'Enforce Usage of pam_wheel with Group Parameter for su Authentication'
 
