--- a/linux_os/guide/system/accounts/accounts-banners/file_groupowner_etc_issue/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-banners/file_groupowner_etc_issue/rule.yml
@@ -44,7 +44,7 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/issue.d/
-        filegid: '0'
+        gid_or_name: '0'
         file_regex: ^.*$
         recursive: 'true'
 {{%- else %}}
