Fix ectd rule e2e failures
This fixes a e2e issue, the logical operator in the rule's platform can cause the rule filter in the platform profile to fail. Since this is a node rule, and hypershift does not have master rule, we can remove this condition from this rule.

--- a/applications/openshift/etcd/etcd_unique_ca/rule.yml
+++ b/applications/openshift/etcd/etcd_unique_ca/rule.yml
@@ -26,7 +26,7 @@ references:
   srg: SRG-APP-000516-CTR-001325
 
 platforms:
-  - ocp4-master-node and not ocp4-on-hypershift-hosted
+  - ocp4-master-node
 
 warnings:
   - dependency: |-
