--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -2102,6 +2102,7 @@ controls:
       - l1_workstation
     automated: partially # we check only for usage of use_uid with pam_su, not for the group
     rules:
+      - ensure_pam_wheel_group_empty
       - use_pam_wheel_group_for_su
       - var_pam_wheel_group_for_su=cis
 
