--- a/product_properties/10-grub.yml
+++ b/product_properties/10-grub.yml
@@ -8,9 +8,11 @@ overrides:
 {{% if "rhel-like" in families and major_version_ordinal <= 8 %}}
   grub2_uefi_boot_path: "/boot/efi/EFI/redhat"
 {{% endif %}}
-{{% if "suse" in families and major_version_ordinal <= 12 %}}
-  grub2_uefi_boot_path: "/boot/efi/EFI/sles"
+{{% if "suse" in families %}}
   grub_helper_executable: "grub2-mkconfig"
+{{% if major_version_ordinal <= 12 %}}
+  grub2_uefi_boot_path: "/boot/efi/EFI/sles"
+{{% endif %}}
 {{% endif %}}
 {{% if "debian-like" in families %}}
   grub2_boot_path: "/boot/grub"
