--- a/tests/data/product_stability/sle15.yml
+++ b/tests/data/product_stability/sle15.yml
@@ -27,7 +27,7 @@ gid_min: 1000
 groups: {}
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/grub2
-grub_helper_executable: grubby
+grub_helper_executable: grub2-mkconfig
 init_system: systemd
 major_version_ordinal: 15
 nobody_gid: 65534
