--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_check_audit_tools/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_check_audit_tools/ansible/shared.yml
@@ -30,13 +30,13 @@
 
 - name: Ensure existing AIDE configuration for audit tools are correct
   lineinfile:
-    path: /etc/aide.conf
+    path: {{{ aide_conf_path }}}
     regexp: ^{{ item }}\s
     line: "{{ item }} {{{ aide_string() }}}"
   with_items: "{{ audit_tools }}"
 
 - name: Configure AIDE to properly protect audit tools
   lineinfile:
-    path: /etc/aide.conf
+    path: {{{ aide_conf_path }}}
     line: "{{ item }} {{{ aide_string() }}}"
   with_items: "{{ audit_tools }}"
