--- a/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_faillock_deny/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_faillock_deny/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: fedora,ol7,ol8,ol9,rhel7,rhel8,rhel9,rhv4,ubuntu2204
+prodtype: fedora,ol7,ol8,ol9,rhel7,rhel8,rhel9,rhv4,ubuntu2004,ubuntu2204
 
 title: 'Lock Accounts After Failed Password Attempts'
 
@@ -65,6 +65,7 @@ references:
     stigid@ol8: OL08-00-020010
     stigid@rhel7: RHEL-07-010320
     stigid@rhel8: RHEL-08-020011
+    stigid@ubuntu2004: UBTU-20-010072
 
 platform: package[pam]
 
