--- a/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_faillock_audit/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_faillock_audit/rule.yml
@@ -20,6 +20,7 @@ references:
     srg: SRG-OS-000021-GPOS-00005
     stigid@ol8: OL08-00-020021
     stigid@rhel8: RHEL-08-020021
+    stigid@ubuntu2004: UBTU-20-010072
 
 ocil_clause: 'the "audit" option is not set, is missing or commented out'
 
