--- a/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_faillock_unlock_time/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_faillock_unlock_time/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: fedora,ol7,ol8,ol9,rhel7,rhel8,rhel9,rhv4,ubuntu2204
+prodtype: fedora,ol7,ol8,ol9,rhel7,rhel8,rhel9,rhv4,ubuntu2004,ubuntu2204
 
 title: 'Set Lockout Time for Failed Password Attempts'
 
@@ -67,6 +67,7 @@ references:
     stigid@ol8: OL08-00-020014
     stigid@rhel7: RHEL-07-010320
     stigid@rhel8: RHEL-08-020015
+    stigid@ubuntu2004: UBTU-20-010072
 
 platform: package[pam]
 
