--- a/controls/cis_ocp_1_4_0/section-1.yml
+++ b/controls/cis_ocp_1_4_0/section-1.yml
@@ -2,7 +2,11 @@ controls:
 - id: '1'
   title: Control Plane Components
   status: pending
-  rules: []
+  rules:
+    ### Helper Rules
+    ### This is a helper rule to fetch the required api resource for detecting OCP version
+    - version_detect_in_ocp
+    - version_detect_in_hypershift
   controls:
   - id: '1.1'
     title: Master Node Configuration Files
